# grepe

./: .gitmodules  CMakeLists.txt  Makefile  README.md  build.zig  gen.py  mylog  tes-cmd.sh
.github/workflows/: cmake-multi-platform.yml  release.yml
include/: common.h  stb_ds.h
src/: cmd.c  common.c  gen_log_cmd.c  horizontal_bar.c  line_decoder.c  main.c  nginx_log_generator.c  test.c
src/decoder/: line_decoder.c
src/tests/: test.c
src/tools/: nginx_log_generator.c
src/tui/: head.c  horizontal_bar.c  realtime_bar.c  realtime_bar_test.c
tools/: gen.py
